--- a/archives/toutiao-search/2023-11-08.md
+++ b/archives/toutiao-search/2023-11-08.md
@@ -1,57 +1,76 @@
 # 2023-11-08
 
-共 162 条
+共 177 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Wed Nov 08 2023 12:00:42 GMT+0800 (China Standard Time) -->
-1. [哈工大回应学生上课像登机](https://so.toutiao.com/search?keyword=哈工大回应学生上课像登机)
-1. [立冬吃饺子](https://so.toutiao.com/search?keyword=立冬吃饺子)
-1. [6年“全勤打卡”的进博老友](https://so.toutiao.com/search?keyword=6年“全勤打卡”的进博老友)
+<!-- 最后更新时间 Wed Nov 08 2023 13:00:54 GMT+0800 (China Standard Time) -->
+1. [成都欢乐谷NPC唐僧扮演者走红](https://so.toutiao.com/search?keyword=成都欢乐谷NPC唐僧扮演者走红)
 1. [东北大学生正式确诊为“滑”妃](https://so.toutiao.com/search?keyword=东北大学生正式确诊为“滑”妃)
-1. [扬州一母亲捂死女儿后跳楼](https://so.toutiao.com/search?keyword=扬州一母亲捂死女儿后跳楼)
+1. [进博会达成合作意向近600项](https://so.toutiao.com/search?keyword=进博会达成合作意向近600项)
+1. [巴勒斯坦总统车队遇袭？知情人否认](https://so.toutiao.com/search?keyword=巴勒斯坦总统车队遇袭？知情人否认)
+1. [中山二院通报乳腺外科多人患癌](https://so.toutiao.com/search?keyword=中山二院通报乳腺外科多人患癌)
 1. [美国和以色列讨论“战术性停火”](https://so.toutiao.com/search?keyword=美国和以色列讨论“战术性停火”)
-1. [朱丹回应叫错人名结束职业生涯](https://so.toutiao.com/search?keyword=朱丹回应叫错人名结束职业生涯)
 1. [董明珠首次回应孟羽童离职](https://so.toutiao.com/search?keyword=董明珠首次回应孟羽童离职)
-1. [中纪委同日处分两只“老虎”](https://so.toutiao.com/search?keyword=中纪委同日处分两只“老虎”)
+1. [哈工大回应学生上课像登机](https://so.toutiao.com/search?keyword=哈工大回应学生上课像登机)
+1. [扬州一母亲捂死女儿后跳楼](https://so.toutiao.com/search?keyword=扬州一母亲捂死女儿后跳楼)
 1. [广东电网辟谣居民电价涨了](https://so.toutiao.com/search?keyword=广东电网辟谣居民电价涨了)
 1. [金莎男友为追她做了100多道菜](https://so.toutiao.com/search?keyword=金莎男友为追她做了100多道菜)
-1. [90后夫妻存100万靠利息生活](https://so.toutiao.com/search?keyword=90后夫妻存100万靠利息生活)
-1. [巴勒斯坦总统车队遇袭？知情人否认](https://so.toutiao.com/search?keyword=巴勒斯坦总统车队遇袭？知情人否认)
-1. [证监会主席回应注册制改革](https://so.toutiao.com/search?keyword=证监会主席回应注册制改革)
-1. [中山二院通报乳腺外科多人患癌](https://so.toutiao.com/search?keyword=中山二院通报乳腺外科多人患癌)
 1. [月光族在间谍指导下考上公务员](https://so.toutiao.com/search?keyword=月光族在间谍指导下考上公务员)
-1. [两男子盗价值4600余元胡蜂蜂巢被拘](https://so.toutiao.com/search?keyword=两男子盗价值4600余元胡蜂蜂巢被拘)
-1. [记者讲述巴以战场印象最深一幕](https://so.toutiao.com/search?keyword=记者讲述巴以战场印象最深一幕)
-1. [古巴总理：恨不得明天就开中古直航](https://so.toutiao.com/search?keyword=古巴总理：恨不得明天就开中古直航)
-1. [俄方分析泽连斯基拒绝战时选举动机](https://so.toutiao.com/search?keyword=俄方分析泽连斯基拒绝战时选举动机)
+1. [朱丹回应叫错人名结束职业生涯](https://so.toutiao.com/search?keyword=朱丹回应叫错人名结束职业生涯)
+1. [90后夫妻存100万靠利息生活](https://so.toutiao.com/search?keyword=90后夫妻存100万靠利息生活)
+1. [男子举报收郑州原副检察长短信威胁](https://so.toutiao.com/search?keyword=男子举报收郑州原副检察长短信威胁)
+1. [曝哈佛“Z名单”为权贵子女开后门](https://so.toutiao.com/search?keyword=曝哈佛“Z名单”为权贵子女开后门)
+1. [动画还原体育馆坍塌现场](https://so.toutiao.com/search?keyword=动画还原体育馆坍塌现场)
+1. [三轮车撞倒2名女生碾压身体后逃逸](https://so.toutiao.com/search?keyword=三轮车撞倒2名女生碾压身体后逃逸)
+1. [大学生兼职带14个汉堡给舍友当夜宵](https://so.toutiao.com/search?keyword=大学生兼职带14个汉堡给舍友当夜宵)
+1. [孩子被爷爷奶奶带后的惊人变化](https://so.toutiao.com/search?keyword=孩子被爷爷奶奶带后的惊人变化)
 1. [以军入侵加沙进入“危险新阶段”](https://so.toutiao.com/search?keyword=以军入侵加沙进入“危险新阶段”)
 1. [美议员喊话以色列：必须停止轰炸](https://so.toutiao.com/search?keyword=美议员喊话以色列：必须停止轰炸)
 1. [媒体：卖出生证院长曾获刑 咋上任的](https://so.toutiao.com/search?keyword=媒体：卖出生证院长曾获刑+咋上任的)
-1. [联合国一机构89名员工死于巴以冲突](https://so.toutiao.com/search?keyword=联合国一机构89名员工死于巴以冲突)
-1. [世卫：对加沙医院任何袭击不可接受](https://so.toutiao.com/search?keyword=世卫：对加沙医院任何袭击不可接受)
-1. [曝哈佛“Z名单”为权贵子女开后门](https://so.toutiao.com/search?keyword=曝哈佛“Z名单”为权贵子女开后门)
-1. [多家手机厂商取消5G开关设置](https://so.toutiao.com/search?keyword=多家手机厂商取消5G开关设置)
+1. [以色列军方逮捕一巴勒斯坦激进分子](https://so.toutiao.com/search?keyword=以色列军方逮捕一巴勒斯坦激进分子)
+1. [美国务院多名官员不满政府巴以政策](https://so.toutiao.com/search?keyword=美国务院多名官员不满政府巴以政策)
+1. [以军称哈马斯领导人被困](https://so.toutiao.com/search?keyword=以军称哈马斯领导人被困)
 1. [100名以医生联署支持以军轰炸医院](https://so.toutiao.com/search?keyword=100名以医生联署支持以军轰炸医院)
-1. [埃及红新月会向加沙提供新一批物资](https://so.toutiao.com/search?keyword=埃及红新月会向加沙提供新一批物资)
-1. [进博会上出现标语：中国强则白俄强](https://so.toutiao.com/search?keyword=进博会上出现标语：中国强则白俄强)
+1. [古巴总理：恨不得明天就开中古直航](https://so.toutiao.com/search?keyword=古巴总理：恨不得明天就开中古直航)
+1. [多家手机厂商取消5G开关设置](https://so.toutiao.com/search?keyword=多家手机厂商取消5G开关设置)
 1. [内地人均居住面积41.8平方米](https://so.toutiao.com/search?keyword=内地人均居住面积41.8平方米)
-1. [广西百色一学生亚硝酸盐中毒身亡](https://so.toutiao.com/search?keyword=广西百色一学生亚硝酸盐中毒身亡)
-1. [三轮车撞倒2名女生碾压身体后逃逸](https://so.toutiao.com/search?keyword=三轮车撞倒2名女生碾压身体后逃逸)
-1. [解晓东阎维文朱时茂聚餐喝12元饮料](https://so.toutiao.com/search?keyword=解晓东阎维文朱时茂聚餐喝12元饮料)
+1. [东北人在雪地里洗貂皮大衣](https://so.toutiao.com/search?keyword=东北人在雪地里洗貂皮大衣)
+1. [当巴勒斯坦母亲发现失踪儿子还活着](https://so.toutiao.com/search?keyword=当巴勒斯坦母亲发现失踪儿子还活着)
+1. [35岁女子在香港做泥瓦工月入10万](https://so.toutiao.com/search?keyword=35岁女子在香港做泥瓦工月入10万)
+1. [炎亚纶涉嫌性剥削被起诉](https://so.toutiao.com/search?keyword=炎亚纶涉嫌性剥削被起诉)
+1. [进博会上出现标语：中国强则白俄强](https://so.toutiao.com/search?keyword=进博会上出现标语：中国强则白俄强)
+1. [iQOO 12正式发布 3999元起售](https://so.toutiao.com/search?keyword=iQOO+12正式发布 3999元起售)
+1. [媒体谈男足备战世预赛36强赛大名单](https://so.toutiao.com/search?keyword=媒体谈男足备战世预赛36强赛大名单)
+1. [车窗玻璃被冻住车主大雪天开窗驾驶](https://so.toutiao.com/search?keyword=车窗玻璃被冻住车主大雪天开窗驾驶)
+1. [南方女生穿泳装在雪地里“游泳”](https://so.toutiao.com/search?keyword=南方女生穿泳装在雪地里“游泳”)
+1. [男子自学中医将自己治成精神异常](https://so.toutiao.com/search?keyword=男子自学中医将自己治成精神异常)
 1. [公司回应不招河南人：领导个人喜好](https://so.toutiao.com/search?keyword=公司回应不招河南人：领导个人喜好)
 1. [淄博烧烤从业者现在怎么样了](https://so.toutiao.com/search?keyword=淄博烧烤从业者现在怎么样了)
-1. [iQOO 12正式发布 3999元起售](https://so.toutiao.com/search?keyword=iQOO+12正式发布 3999元起售)
+1. [转战“柯郭合”？柯文哲打起了太极](https://so.toutiao.com/search?keyword=转战“柯郭合”？柯文哲打起了太极)
+1. [今年冬天会是最冷冬天吗](https://so.toutiao.com/search?keyword=今年冬天会是最冷冬天吗)
+1. [易会满：严防过度杠杆](https://so.toutiao.com/search?keyword=易会满：严防过度杠杆)
+1. [女儿被打父亲悬赏1万找打人者](https://so.toutiao.com/search?keyword=女儿被打父亲悬赏1万找打人者)
+1. [老师回应被举报辱骂学生抽取奖学金](https://so.toutiao.com/search?keyword=老师回应被举报辱骂学生抽取奖学金)
+1. [媒体：国足首战泰国须抢3分](https://so.toutiao.com/search?keyword=媒体：国足首战泰国须抢3分)
+1. [男子列车刷手机被俩女孩误会在偷拍](https://so.toutiao.com/search?keyword=男子列车刷手机被俩女孩误会在偷拍)
+1. [美国广播公司原副总裁谈中国的创新](https://so.toutiao.com/search?keyword=美国广播公司原副总裁谈中国的创新)
+1. [立冬吃饺子](https://so.toutiao.com/search?keyword=立冬吃饺子)
+1. [6年“全勤打卡”的进博老友](https://so.toutiao.com/search?keyword=6年“全勤打卡”的进博老友)
+1. [中纪委同日处分两只“老虎”](https://so.toutiao.com/search?keyword=中纪委同日处分两只“老虎”)
+1. [证监会主席回应注册制改革](https://so.toutiao.com/search?keyword=证监会主席回应注册制改革)
+1. [两男子盗价值4600余元胡蜂蜂巢被拘](https://so.toutiao.com/search?keyword=两男子盗价值4600余元胡蜂蜂巢被拘)
+1. [记者讲述巴以战场印象最深一幕](https://so.toutiao.com/search?keyword=记者讲述巴以战场印象最深一幕)
+1. [俄方分析泽连斯基拒绝战时选举动机](https://so.toutiao.com/search?keyword=俄方分析泽连斯基拒绝战时选举动机)
+1. [联合国一机构89名员工死于巴以冲突](https://so.toutiao.com/search?keyword=联合国一机构89名员工死于巴以冲突)
+1. [世卫：对加沙医院任何袭击不可接受](https://so.toutiao.com/search?keyword=世卫：对加沙医院任何袭击不可接受)
+1. [埃及红新月会向加沙提供新一批物资](https://so.toutiao.com/search?keyword=埃及红新月会向加沙提供新一批物资)
+1. [广西百色一学生亚硝酸盐中毒身亡](https://so.toutiao.com/search?keyword=广西百色一学生亚硝酸盐中毒身亡)
+1. [解晓东阎维文朱时茂聚餐喝12元饮料](https://so.toutiao.com/search?keyword=解晓东阎维文朱时茂聚餐喝12元饮料)
 1. [家长投诉学校后被查电话号码](https://so.toutiao.com/search?keyword=家长投诉学校后被查电话号码)
-1. [35岁女子在香港做泥瓦工月入10万](https://so.toutiao.com/search?keyword=35岁女子在香港做泥瓦工月入10万)
-1. [男子自学中医将自己治成精神异常](https://so.toutiao.com/search?keyword=男子自学中医将自己治成精神异常)
 1. [立冬护肤小妙招](https://so.toutiao.com/search?keyword=立冬护肤小妙招)
-1. [成都欢乐谷NPC唐僧扮演者走红](https://so.toutiao.com/search?keyword=成都欢乐谷NPC唐僧扮演者走红)
-1. [男子举报收郑州原副检察长短信威胁](https://so.toutiao.com/search?keyword=男子举报收郑州原副检察长短信威胁)
 1. [古巴感谢中国连续31年的无条件支持](https://so.toutiao.com/search?keyword=古巴感谢中国连续31年的无条件支持)
-1. [孩子被爷爷奶奶带后的惊人变化](https://so.toutiao.com/search?keyword=孩子被爷爷奶奶带后的惊人变化)
 1. [巴安全部门6成员在追捕行动中受伤](https://so.toutiao.com/search?keyword=巴安全部门6成员在追捕行动中受伤)
 1. [大雪后东北车主找车像拆盲盒](https://so.toutiao.com/search?keyword=大雪后东北车主找车像拆盲盒)
-1. [南方女生穿泳装在雪地里“游泳”](https://so.toutiao.com/search?keyword=南方女生穿泳装在雪地里“游泳”)
 1. [柯文哲回应“蓝白合”：请耐心等待](https://so.toutiao.com/search?keyword=柯文哲回应“蓝白合”：请耐心等待)
 1. [卡桑旅：以袭击阻碍被扣押人员释放](https://so.toutiao.com/search?keyword=卡桑旅：以袭击阻碍被扣押人员释放)
 1. [官方通报“医院院长贩卖出生证”](https://so.toutiao.com/search?keyword=官方通报“医院院长贩卖出生证”)
@@ -62,19 +81,15 @@
 1. [记者实探被举报贩卖出生证医院](https://so.toutiao.com/search?keyword=记者实探被举报贩卖出生证医院)
 1. [《宁安如梦》的运镜](https://so.toutiao.com/search?keyword=《宁安如梦》的运镜)
 1. [医生科普传染性单核细胞增多症](https://so.toutiao.com/search?keyword=医生科普传染性单核细胞增多症)
-1. [车窗玻璃被冻住车主大雪天开窗驾驶](https://so.toutiao.com/search?keyword=车窗玻璃被冻住车主大雪天开窗驾驶)
-1. [东北人在雪地里洗貂皮大衣](https://so.toutiao.com/search?keyword=东北人在雪地里洗貂皮大衣)
 1. [专家：实验致研究员集体患癌概率为0](https://so.toutiao.com/search?keyword=专家：实验致研究员集体患癌概率为0)
 1. [懂车帝夜间AEB专项测试榜单出炉](https://so.toutiao.com/search?keyword=懂车帝夜间AEB专项测试榜单出炉)
 1. [立冬里的传承与坚守](https://so.toutiao.com/search?keyword=立冬里的传承与坚守)
 1. [国内成品油价格调整](https://so.toutiao.com/search?keyword=国内成品油价格调整)
 1. [美国延续针对伊朗国家紧急状态一年](https://so.toutiao.com/search?keyword=美国延续针对伊朗国家紧急状态一年)
-1. [男子列车刷手机被俩女孩误会在偷拍](https://so.toutiao.com/search?keyword=男子列车刷手机被俩女孩误会在偷拍)
 1. [白宫：美总统不认为以军应占领加沙](https://so.toutiao.com/search?keyword=白宫：美总统不认为以军应占领加沙)
 1. [退役军人祖孙三代合影](https://so.toutiao.com/search?keyword=退役军人祖孙三代合影)
 1. [女孩坐18小时硬座跨千里给男友惊喜](https://so.toutiao.com/search?keyword=女孩坐18小时硬座跨千里给男友惊喜)
 1. [体育馆坍塌 哪些建筑最弱不禁雪](https://so.toutiao.com/search?keyword=体育馆坍塌+哪些建筑最弱不禁雪)
-1. [今年冬天会是最冷冬天吗](https://so.toutiao.com/search?keyword=今年冬天会是最冷冬天吗)
 1. [部分议员呼吁美履行对菲老兵的承诺](https://so.toutiao.com/search?keyword=部分议员呼吁美履行对菲老兵的承诺)
 1. [科尔：库里的防守被严重低估了](https://so.toutiao.com/search?keyword=科尔：库里的防守被严重低估了)
 1. [厦门街头散落大量百元钞票](https://so.toutiao.com/search?keyword=厦门街头散落大量百元钞票)
