--- a/archives/toutiao-search/2023-11-08.md
+++ b/archives/toutiao-search/2023-11-08.md
@@ -1,59 +1,85 @@
 # 2023-11-08
 
-共 222 条
+共 244 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Wed Nov 08 2023 15:00:38 GMT+0800 (China Standard Time) -->
-1. [中山二院癌症患者确诊隔天被踢出群](https://so.toutiao.com/search?keyword=中山二院癌症患者确诊隔天被踢出群)
-1. [东北大学生正式确诊为“滑”妃](https://so.toutiao.com/search?keyword=东北大学生正式确诊为“滑”妃)
+<!-- 最后更新时间 Wed Nov 08 2023 16:00:51 GMT+0800 (China Standard Time) -->
+1. [男子举报妻子出轨国企领导两次流产](https://so.toutiao.com/search?keyword=男子举报妻子出轨国企领导两次流产)
+1. [中山二院通报乳腺外科多人患癌](https://so.toutiao.com/search?keyword=中山二院通报乳腺外科多人患癌)
 1. [进博会达成合作意向近600项](https://so.toutiao.com/search?keyword=进博会达成合作意向近600项)
+1. [抢药材抢红薯 河南彻底洗不白了？](https://so.toutiao.com/search?keyword=抢药材抢红薯+河南彻底洗不白了？)
+1. [哈尔滨暴雪高校学生公寓墙体开裂](https://so.toutiao.com/search?keyword=哈尔滨暴雪高校学生公寓墙体开裂)
+1. [长期吃腌制菜对身体有害？专家回应](https://so.toutiao.com/search?keyword=长期吃腌制菜对身体有害？专家回应)
+1. [东北大学生正式确诊为“滑”妃](https://so.toutiao.com/search?keyword=东北大学生正式确诊为“滑”妃)
 1. [媒体：务必彻查中山二院学生患癌事件](https://so.toutiao.com/search?keyword=媒体：务必彻查中山二院学生患癌事件)
+1. [中国平安否认收购碧桂园](https://so.toutiao.com/search?keyword=中国平安否认收购碧桂园)
+1. [孟羽童一年半广告收入或达400万](https://so.toutiao.com/search?keyword=孟羽童一年半广告收入或达400万)
+1. [金莎男友为追她做了100多道菜](https://so.toutiao.com/search?keyword=金莎男友为追她做了100多道菜)
+1. [中山二院癌症患者确诊隔天被踢出群](https://so.toutiao.com/search?keyword=中山二院癌症患者确诊隔天被踢出群)
+1. [贾乃亮疑似恋情曝光](https://so.toutiao.com/search?keyword=贾乃亮疑似恋情曝光)
+1. [物业撤走十天后的小区现状](https://so.toutiao.com/search?keyword=物业撤走十天后的小区现状)
+1. [贪官借上厕所用老人机传拍地底价](https://so.toutiao.com/search?keyword=贪官借上厕所用老人机传拍地底价)
+1. [董明珠首次回应孟羽童离职](https://so.toutiao.com/search?keyword=董明珠首次回应孟羽童离职)
+1. [泽连斯基任期届满后将继续履职](https://so.toutiao.com/search?keyword=泽连斯基任期届满后将继续履职)
+1. [谁承建了5年就垮的体育馆](https://so.toutiao.com/search?keyword=谁承建了5年就垮的体育馆)
+1. [古巴总理：恨不得明天就开中古直航](https://so.toutiao.com/search?keyword=古巴总理：恨不得明天就开中古直航)
+1. [魅族在B站直播iQOO 12系列发布会](https://so.toutiao.com/search?keyword=魅族在B站直播iQOO+12系列发布会)
+1. [以军称“加大了对加沙城内的压力”](https://so.toutiao.com/search?keyword=以军称“加大了对加沙城内的压力”)
+1. [以称对哈马斯行动还将持续一段时间](https://so.toutiao.com/search?keyword=以称对哈马斯行动还将持续一段时间)
+1. [媒体：卖出生证院长曾获刑 咋上任的](https://so.toutiao.com/search?keyword=媒体：卖出生证院长曾获刑+咋上任的)
+1. [巴以冲突开战一个月开打“地道战”](https://so.toutiao.com/search?keyword=巴以冲突开战一个月开打“地道战”)
+1. [iQOO首款自研电竞芯片Q1发布](https://so.toutiao.com/search?keyword=iQOO首款自研电竞芯片Q1发布)
+1. [美媒：与中国关系恶化美国并不无辜](https://so.toutiao.com/search?keyword=美媒：与中国关系恶化美国并不无辜)
+1. [总台记者：以军对加沙空袭从未停止](https://so.toutiao.com/search?keyword=总台记者：以军对加沙空袭从未停止)
+1. [男子清理房顶积雪直接扔下楼](https://so.toutiao.com/search?keyword=男子清理房顶积雪直接扔下楼)
+1. [易会满：注册制不是放松监管](https://so.toutiao.com/search?keyword=易会满：注册制不是放松监管)
+1. [澳总理访华 中澳关系“稳”了吗](https://so.toutiao.com/search?keyword=澳总理访华+中澳关系“稳”了吗)
+1. [古巴感谢中国连续31年的无条件支持](https://so.toutiao.com/search?keyword=古巴感谢中国连续31年的无条件支持)
+1. [小伙在自家厕所里建海洋馆隐居6年](https://so.toutiao.com/search?keyword=小伙在自家厕所里建海洋馆隐居6年)
+1. [洋记者逛进博：没想到美展商这么多](https://so.toutiao.com/search?keyword=洋记者逛进博：没想到美展商这么多)
+1. [恒大地产再被强制执行8.7亿](https://so.toutiao.com/search?keyword=恒大地产再被强制执行8.7亿)
+1. [潘功胜在金融街论坛都讲了哪些重点](https://so.toutiao.com/search?keyword=潘功胜在金融街论坛都讲了哪些重点)
+1. [李银河直播再谈爱情](https://so.toutiao.com/search?keyword=李银河直播再谈爱情)
+1. [今年冬天会是最冷冬天吗](https://so.toutiao.com/search?keyword=今年冬天会是最冷冬天吗)
+1. [当巴勒斯坦母亲发现失踪儿子还活着](https://so.toutiao.com/search?keyword=当巴勒斯坦母亲发现失踪儿子还活着)
+1. [医生谈集体患癌：中山二院自说自话](https://so.toutiao.com/search?keyword=医生谈集体患癌：中山二院自说自话)
+1. [河南两女子浑身是血倒在街头](https://so.toutiao.com/search?keyword=河南两女子浑身是血倒在街头)
+1. [多家手机厂商取消5G开关设置](https://so.toutiao.com/search?keyword=多家手机厂商取消5G开关设置)
+1. [iQOO 12正式发布 3999元起售](https://so.toutiao.com/search?keyword=iQOO+12正式发布 3999元起售)
+1. [中央气象台：未来十天北方气温偏低](https://so.toutiao.com/search?keyword=中央气象台：未来十天北方气温偏低)
+1. [警方通报男子举报南宁原市委书记](https://so.toutiao.com/search?keyword=警方通报男子举报南宁原市委书记)
+1. [国内成品油价格调整](https://so.toutiao.com/search?keyword=国内成品油价格调整)
+1. [幼儿园围墙拉满电网？负责人回应](https://so.toutiao.com/search?keyword=幼儿园围墙拉满电网？负责人回应)
+1. [班达海地震不会对中国沿岸造成影响](https://so.toutiao.com/search?keyword=班达海地震不会对中国沿岸造成影响)
+1. [老师回应被举报辱骂学生抽取奖学金](https://so.toutiao.com/search?keyword=老师回应被举报辱骂学生抽取奖学金)
+1. [女子欲离婚被丈夫割喉 其父发声](https://so.toutiao.com/search?keyword=女子欲离婚被丈夫割喉+其父发声)
+1. [公司回应不招河南人：领导个人喜好](https://so.toutiao.com/search?keyword=公司回应不招河南人：领导个人喜好)
 1. [老旧小区加装电梯典型案例发布](https://so.toutiao.com/search?keyword=老旧小区加装电梯典型案例发布)
 1. [朱丹回应叫错人名结束职业生涯](https://so.toutiao.com/search?keyword=朱丹回应叫错人名结束职业生涯)
-1. [中山二院通报乳腺外科多人患癌](https://so.toutiao.com/search?keyword=中山二院通报乳腺外科多人患癌)
 1. [金莎00后男友回应质疑：爱意不假](https://so.toutiao.com/search?keyword=金莎00后男友回应质疑：爱意不假)
-1. [河南两女子浑身是血倒在街头](https://so.toutiao.com/search?keyword=河南两女子浑身是血倒在街头)
 1. [广东电网辟谣居民电价涨了](https://so.toutiao.com/search?keyword=广东电网辟谣居民电价涨了)
 1. [扬州一母亲捂死女儿后跳楼](https://so.toutiao.com/search?keyword=扬州一母亲捂死女儿后跳楼)
-1. [长期吃腌制菜对身体有害？专家回应](https://so.toutiao.com/search?keyword=长期吃腌制菜对身体有害？专家回应)
-1. [金莎男友为追她做了100多道菜](https://so.toutiao.com/search?keyword=金莎男友为追她做了100多道菜)
-1. [谁承建了5年就垮的体育馆](https://so.toutiao.com/search?keyword=谁承建了5年就垮的体育馆)
 1. [女儿被打父亲悬赏1万找打人者](https://so.toutiao.com/search?keyword=女儿被打父亲悬赏1万找打人者)
 1. [专卖店全款买苹果手机反背六千欠款](https://so.toutiao.com/search?keyword=专卖店全款买苹果手机反背六千欠款)
 1. [广州卫健委回应中山二院学生患癌](https://so.toutiao.com/search?keyword=广州卫健委回应中山二院学生患癌)
-1. [董明珠首次回应孟羽童离职](https://so.toutiao.com/search?keyword=董明珠首次回应孟羽童离职)
-1. [贪官借上厕所用老人机传拍地底价](https://so.toutiao.com/search?keyword=贪官借上厕所用老人机传拍地底价)
 1. [成都地铁打人男子被行政拘留13日](https://so.toutiao.com/search?keyword=成都地铁打人男子被行政拘留13日)
-1. [以称对哈马斯行动还将持续一段时间](https://so.toutiao.com/search?keyword=以称对哈马斯行动还将持续一段时间)
-1. [巴以冲突开战一个月开打“地道战”](https://so.toutiao.com/search?keyword=巴以冲突开战一个月开打“地道战”)
-1. [媒体：卖出生证院长曾获刑 咋上任的](https://so.toutiao.com/search?keyword=媒体：卖出生证院长曾获刑+咋上任的)
-1. [以军称“加大了对加沙城内的压力”](https://so.toutiao.com/search?keyword=以军称“加大了对加沙城内的压力”)
 1. [以军空袭一难民营致至少4人死亡](https://so.toutiao.com/search?keyword=以军空袭一难民营致至少4人死亡)
 1. [倒卖出生医学证明的双面院长](https://so.toutiao.com/search?keyword=倒卖出生医学证明的双面院长)
 1. [中山二院多人患癌是实验试剂惹的祸吗](https://so.toutiao.com/search?keyword=中山二院多人患癌是实验试剂惹的祸吗)
 1. [《红毯先生》延至明年春节档](https://so.toutiao.com/search?keyword=《红毯先生》延至明年春节档)
-1. [男子举报妻子出轨国企领导两次流产](https://so.toutiao.com/search?keyword=男子举报妻子出轨国企领导两次流产)
-1. [古巴总理：恨不得明天就开中古直航](https://so.toutiao.com/search?keyword=古巴总理：恨不得明天就开中古直航)
 1. [《红毯先生》改档玩“资方梗”](https://so.toutiao.com/search?keyword=《红毯先生》改档玩“资方梗”)
 1. [到底多大的雪能压垮体育馆](https://so.toutiao.com/search?keyword=到底多大的雪能压垮体育馆)
 1. [东北人在雪地里洗貂皮大衣](https://so.toutiao.com/search?keyword=东北人在雪地里洗貂皮大衣)
 1. [澳大利亚对华政策的方向有所改变吗](https://so.toutiao.com/search?keyword=澳大利亚对华政策的方向有所改变吗)
 1. [立冬有哪些农谚](https://so.toutiao.com/search?keyword=立冬有哪些农谚)
-1. [幼儿园围墙拉满电网？负责人回应](https://so.toutiao.com/search?keyword=幼儿园围墙拉满电网？负责人回应)
 1. [印尼班达海发生7.1级地震](https://so.toutiao.com/search?keyword=印尼班达海发生7.1级地震)
 1. [潘功胜：我国经济增长持续回升向好](https://so.toutiao.com/search?keyword=潘功胜：我国经济增长持续回升向好)
-1. [古巴感谢中国连续31年的无条件支持](https://so.toutiao.com/search?keyword=古巴感谢中国连续31年的无条件支持)
 1. [问界小鹏AEB之争：热门车夜间实测](https://so.toutiao.com/search?keyword=问界小鹏AEB之争：热门车夜间实测)
 1. [易会满：大力推进监管转型](https://so.toutiao.com/search?keyword=易会满：大力推进监管转型)
-1. [泽连斯基任期届满后将继续履职](https://so.toutiao.com/search?keyword=泽连斯基任期届满后将继续履职)
 1. [淄博烧烤从业者现在怎么样了](https://so.toutiao.com/search?keyword=淄博烧烤从业者现在怎么样了)
 1. [侯韩配能边缘化赖清德？郭正亮回应](https://so.toutiao.com/search?keyword=侯韩配能边缘化赖清德？郭正亮回应)
 1. [是谁盯上了医院出生证](https://so.toutiao.com/search?keyword=是谁盯上了医院出生证)
-1. [多家手机厂商取消5G开关设置](https://so.toutiao.com/search?keyword=多家手机厂商取消5G开关设置)
-1. [当巴勒斯坦母亲发现失踪儿子还活着](https://so.toutiao.com/search?keyword=当巴勒斯坦母亲发现失踪儿子还活着)
 1. [官方明确伊犁州行政级别为副省级建制](https://so.toutiao.com/search?keyword=官方明确伊犁州行政级别为副省级建制)
-1. [公司回应不招河南人：领导个人喜好](https://so.toutiao.com/search?keyword=公司回应不招河南人：领导个人喜好)
-1. [女子欲离婚被丈夫割喉 其父发声](https://so.toutiao.com/search?keyword=女子欲离婚被丈夫割喉+其父发声)
 1. [哈工大回应学生上课像登机](https://so.toutiao.com/search?keyword=哈工大回应学生上课像登机)
 1. [7岁女童被恶犬撕咬毁容 仍未脱离危险](https://so.toutiao.com/search?keyword=7岁女童被恶犬撕咬毁容+仍未脱离危险)
 1. [美国和以色列讨论“战术性停火”](https://so.toutiao.com/search?keyword=美国和以色列讨论“战术性停火”)
@@ -61,14 +87,12 @@
 1. [进博会上出现标语：中国强则白俄强](https://so.toutiao.com/search?keyword=进博会上出现标语：中国强则白俄强)
 1. [证监会主席：严防过度杠杆](https://so.toutiao.com/search?keyword=证监会主席：严防过度杠杆)
 1. [姚立明昔骂民进党今为赖清德竞选](https://so.toutiao.com/search?keyword=姚立明昔骂民进党今为赖清德竞选)
-1. [iQOO 12正式发布 3999元起售](https://so.toutiao.com/search?keyword=iQOO+12正式发布 3999元起售)
 1. [近十国对以色列采取外交措施](https://so.toutiao.com/search?keyword=近十国对以色列采取外交措施)
 1. [巴勒斯坦裔议员斥美不人道反遭声讨](https://so.toutiao.com/search?keyword=巴勒斯坦裔议员斥美不人道反遭声讨)
 1. [以军称哈马斯领导人被困](https://so.toutiao.com/search?keyword=以军称哈马斯领导人被困)
 1. [以色列外长会见新任美国驻以大使](https://so.toutiao.com/search?keyword=以色列外长会见新任美国驻以大使)
 1. [姆巴佩：输球很艰难](https://so.toutiao.com/search?keyword=姆巴佩：输球很艰难)
 1. [“冬”字原来是打结的绳子](https://so.toutiao.com/search?keyword=“冬”字原来是打结的绳子)
-1. [国内成品油价格调整](https://so.toutiao.com/search?keyword=国内成品油价格调整)
 1. [曝扬科维奇有一份50人左右大名单](https://so.toutiao.com/search?keyword=曝扬科维奇有一份50人左右大名单)
 1. [高铁遇暴雪停运7h全车被困无人埋怨](https://so.toutiao.com/search?keyword=高铁遇暴雪停运7h全车被困无人埋怨)
 1. [车窗玻璃被冻住车主大雪天开窗驾驶](https://so.toutiao.com/search?keyword=车窗玻璃被冻住车主大雪天开窗驾驶)
@@ -100,9 +124,7 @@
 1. [媒体谈男足备战世预赛36强赛大名单](https://so.toutiao.com/search?keyword=媒体谈男足备战世预赛36强赛大名单)
 1. [南方女生穿泳装在雪地里“游泳”](https://so.toutiao.com/search?keyword=南方女生穿泳装在雪地里“游泳”)
 1. [转战“柯郭合”？柯文哲打起了太极](https://so.toutiao.com/search?keyword=转战“柯郭合”？柯文哲打起了太极)
-1. [今年冬天会是最冷冬天吗](https://so.toutiao.com/search?keyword=今年冬天会是最冷冬天吗)
 1. [易会满：严防过度杠杆](https://so.toutiao.com/search?keyword=易会满：严防过度杠杆)
-1. [老师回应被举报辱骂学生抽取奖学金](https://so.toutiao.com/search?keyword=老师回应被举报辱骂学生抽取奖学金)
 1. [美国广播公司原副总裁谈中国的创新](https://so.toutiao.com/search?keyword=美国广播公司原副总裁谈中国的创新)
 1. [立冬吃饺子](https://so.toutiao.com/search?keyword=立冬吃饺子)
 1. [6年“全勤打卡”的进博老友](https://so.toutiao.com/search?keyword=6年“全勤打卡”的进博老友)
